# game_of_life_direct2D_version

./: Cargo.toml  README.md
src/: main.rs
