[package]
name = "game_of_life_direct2D"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.39.0"
features = [
    "Foundation_Numerics",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_UI_Animation",
    "Win32_UI_WindowsAndMessaging",

    "Win32_System_Console", 
    "Win32_Foundation"
]

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"